--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,30 +32,49 @@
 
 </div>
 
-  <footer>
-   <ul>
-   <li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-   <li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
-   </ul>
-  </footer>
+<footer class="footer-4">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 text-center">
+        <ul class="social-links">
+          <li><a href="/about-us">About Us</a></li>
+          <li><a href="http://status.coreix.net" target="_blank">Service Status</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/support">Support</a></li>
+          <li><a href="/legal">Legal & Cookie Policy</a></li>
+          <li><a href="/contact-us">Contact Us</a></li>
+
+        </ul>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-sm-12 text-center">
+        <span>© Copyright {{date format="YYYY"}} {{@blog.title}} Limited. All rights reserved.</span>
+      </div>
+    </div>
+  </div>
+</footer>
+
+</div>
+
+<script type="text/javascript" src='https://www.google.com/recaptcha/api.js'></script>
+<script type="text/javascript" src="/js/jquery.fitvids.js"></script>
+<script type="text/javascript" src="/js/index.js"></script>
+<script type="text/javascript" src="/js/jquery.min.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/ScrollToPlugin.min.js"></script>
+<script type="text/javascript" src="/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/skrollr.min.js"></script>
+<script type="text/javascript" src="/js/flexslider.min.js"></script>
+<script type="text/javascript" src="/js/lightbox.min.js"></script>
+<script type="text/javascript" src="/js/twitterfetcher.min.js"></script>
+<script type="text/javascript" src="/js/spectragram.min.js"></script>
+<script type="text/javascript" src="/js/smooth-scroll.min.js"></script>
+<script type="text/javascript" src="/js/jquery.plugin.min.js"></script>
+<script type="text/javascript" src="/js/placeholders.min.js"></script>
+<script type="text/javascript" src="/js/countdown.min.js"></script>
+<script type="text/javascript" src="/js/scripts.js"></script>
+
   </body>
-
-  <script type="text/javascript" src='https://www.google.com/recaptcha/api.js'></script>
-  <script type="text/javascript" src="/js/jquery.fitvids.js"></script>
-  <script type="text/javascript" src="/js/index.js"></script>
-	<script type="text/javascript" src="/js/jquery.min.js"></script>
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
-	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/ScrollToPlugin.min.js"></script>
-  <script type="text/javascript" src="/js/bootstrap.min.js"></script>
-  <script type="text/javascript" src="/js/skrollr.min.js"></script>
-  <script type="text/javascript" src="/js/flexslider.min.js"></script>
-  <script type="text/javascript" src="/js/lightbox.min.js"></script>
-  <script type="text/javascript" src="/js/twitterfetcher.min.js"></script>
-  <script type="text/javascript" src="/js/spectragram.min.js"></script>
-  <script type="text/javascript" src="/js/smooth-scroll.min.js"></script>
-  <script type="text/javascript" src="/js/jquery.plugin.min.js"></script>
-  <script type="text/javascript" src="/js/placeholders.min.js"></script>
-  <script type="text/javascript" src="/js/countdown.min.js"></script>
-  <script type="text/javascript" src="/js/scripts.js"></script>
-
 </html>
