--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,11 +67,11 @@
   </div>
 
 
-<div class="container">
+<!-- <div class="container"> -->
 
   {{ content }}
 
-</div>
+<!-- </div> -->
 
 <footer class="footer-4">
   <div class="container">
