--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <title>{{ page.title }}</title>
 
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+  <!--  <link rel="stylesheet" type="text/css" href="/css/main.css"> -->
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/css/elegant-icons.min.css">
     <link rel="stylesheet" type="text/css" href="/css/pe-icon-7-stroke.min.css">
