--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>{{ page.title }}</title>
+  <title>{{ page.layout }} {{ page.title }}</title>
 
   <!--  <link rel="stylesheet" type="text/css" href="/css/main.css"> -->
   <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
