--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>{{ page.layout }} {{ page.title }}</title>
+  <title>{{ page.title }}</title>
 
   <!--  <link rel="stylesheet" type="text/css" href="/css/main.css"> -->
   <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
@@ -14,6 +14,8 @@
   <link rel="stylesheet" type="text/css" href="/css/custom.css">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:100,400,300,700,400italic,500%7CMontserrat:400,700">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400">
+
+  <link rel="stylesheet" type="text/css" href="/css/{{ page.layout }}.css">
 
 </head>
 
