--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 <body>
 
 
-  {% include menu/default.html %}
+  {% include menu/{{ page.layout }}.html %}
 
 
   <!-- <div class="container"> -->
