--- a/_includes/nav/about-us.html
+++ b/_includes/nav/about-us.html
@@ -9,27 +9,27 @@
 
 
 					<li style="display: inline;">
-						<a href="/our-commitments">Our Commitments</a>
+						<a href="/about-us/our-commitments">Our Commitments</a>
 					</li>
 
 
 					<li style="display: inline;">
-						<a href="/management-team">Management Team</a>
+						<a href="/about-us/management-team">Management Team</a>
 					</li>
 
 
 					<li style="display: inline;">
-						<a href="/testimonials">Testimonials</a>
+						<a href="/about-us/testimonials">Testimonials</a>
 					</li>
 
 
 					<li style="display: inline;">
-						<a href="/partner-program">Partner Program</a>
+						<a href="/about-us/partner-program">Partner Program</a>
 					</li>
 
 
 					<li style="display: inline;">
-						<a href="/careers">Careers</a>
+						<a href="/about-us/careers">Careers</a>
 					</li>
 				</ul>
 			</div>
