--- a/_includes/title/default.html
+++ b/_includes/title/default.html
@@ -1,16 +1,9 @@
-<section class="double-pad" style="background: #384b78; padding-top: 100px; padding-bottom: 10px;">
-	<div class="background-image-holder overlay" style="opacity: 0 !important;">
-		<img alt="Slide Background" class="background-image" src="img/hero19.jpg">
-	</div>
-
-
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-sm-7">
-				<h1 class="text-white" style="font-size: 40px;">
-				  {{ include.param }}
-				</h1>
-			</div>
-		</div>
-	</div>
+<section class="large-pad" style="background: #ffffff;">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1 col-sm-12 text-center">
+                <p class="super-lead">{{ include.param }}</p>
+            </div>
+        </div>
+    </div>
 </section>
