--- a/_includes/navigation/about-us.html
+++ b/_includes/navigation/about-us.html
@@ -4,7 +4,7 @@
 			<div class="col-sm-12 text-center">
 				<ul class="submenu" style="list-style-type: none;">
 					<li style="display: inline;">
-						<a href="/about-us" style="border-bottom: 2px solid #777; padding-bottom: 2px;">Company</a>
+						<a href="/about-us">Company</a>
 					</li>
 
 
