--- a/_includes/navigation/about-us.html
+++ b/_includes/navigation/about-us.html
@@ -29,6 +29,10 @@
 
 
 					<li style="display: inline;">
+						<a href="/about-us/media-centre">Media Centre</a>
+					</li>
+
+					<li style="display: inline;">
 						<a href="/about-us/careers">Careers</a>
 					</li>
 				</ul>
