--- a/_layouts/dedicated-servers.html
+++ b/_layouts/dedicated-servers.html
@@ -1,1 +1,138 @@
-..
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>{{ page.title }}</title>
+
+  <!--  <link rel="stylesheet" type="text/css" href="/css/main.css"> -->
+  <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/elegant-icons.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/pe-icon-7-stroke.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/flexslider.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/lightbox.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/theme.css">
+  <link rel="stylesheet" type="text/css" href="/css/custom.css">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:100,400,300,700,400italic,500%7CMontserrat:400,700">
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400">
+
+  <link rel="stylesheet" type="text/css" href="/css/dedicated-servers.css">
+
+</head>
+
+
+<body>
+
+
+  		<div class="nav-container">
+		
+
+			<nav class="nav-1" style="max-width: 100%; background: #cf832e; border-bottom: 1px solid rgba(255, 255, 255, 0.2);">
+				<div class="container">
+					<div class="row">
+						<div class="col-xs-12">
+							<a href="/" class="home-link">
+								<img alt="Logo" class="logo" style="margin-right: 30px; width: 85px;" src="https://console.coreix.net/assets/cwhite.png">
+							</a>
+							<ul class="menu">
+								
+								<li class="has-dropdown"><a href="/dedicated-servers"><i class="pe-7s-server" style="font-weight: bold; padding-right: 10px;"></i> Dedicated Servers</a>
+									<ul class="subnav">
+										<li><a href="/colocation"><i class="pe-7s-tools" style="font-weight: bold; padding-right: 10px;"></i> Colocation & Networking</a></li>
+										<li><a href="/cloud"><i class="pe-7s-cloud" style="font-weight: bold; padding-right: 10px;"></i> Public & Private Cloud</a></li>
+										<li><a href="/managed-services"><i class="pe-7s-shopbag" style="font-weight: bold; padding-right: 10px;"></i> Managed Services</a></li>
+										
+									</ul>
+								</li>
+								
+							</ul>
+							
+							<div class="nav-functions">
+						
+								<div class="search-bar" style="float: right;">
+									<form class="search">
+										<input type="text" placeholder="" name="search">
+										<input type="submit" value="">
+										<i class="pe-7s-search"></i>
+									</form>
+								</div>
+							</div>
+							
+							<ul class="menu" style="float: right;">
+							
+								<li><a href="#">Dedicated Solutions</a></li>
+								<li><a href="#">SMB Zone</a></li>
+								<li><a href="#">Enterprise Zone</a></li>
+								<li><a href="/contact-us">Contact Us</a></li>
+								
+							</ul>
+						
+
+							
+						</div>
+					</div>
+				</div>
+			
+				<div class="mobile-toggle">
+					<div class="bar-1"></div>
+					<div class="bar-2"></div>
+				</div>
+			</nav>
+			
+		</div>
+
+
+
+
+  <!-- <div class="container"> -->
+
+  {{ content }}
+
+  <!-- </div> -->
+
+  <footer class="footer-4">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 text-center">
+          <ul class="social-links">
+            <li><a href="/about-us">About Us</a></li>
+            <li><a href="http://status.coreix.net" target="_blank">Service Status</a></li>
+            <li><a href="/blog">Blog</a></li>
+            <li><a href="/support">Support</a></li>
+            <li><a href="/legal">Legal & Cookie Policy</a></li>
+            <li><a href="/contact-us">Contact Us</a></li>
+
+          </ul>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm-12 text-center">
+          <span>© Copyright {{date format="YYYY"}} {{@blog.title}} Limited. All rights reserved.</span>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  </div>
+
+  <script type="text/javascript" src='https://www.google.com/recaptcha/api.js'></script>
+  <script type="text/javascript" src="/js/jquery.fitvids.js"></script>
+  <script type="text/javascript" src="/js/index.js"></script>
+  <script type="text/javascript" src="/js/jquery.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/plugins/ScrollToPlugin.min.js"></script>
+  <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/js/skrollr.min.js"></script>
+  <script type="text/javascript" src="/js/flexslider.min.js"></script>
+  <script type="text/javascript" src="/js/lightbox.min.js"></script>
+  <script type="text/javascript" src="/js/twitterfetcher.min.js"></script>
+  <script type="text/javascript" src="/js/spectragram.min.js"></script>
+  <script type="text/javascript" src="/js/smooth-scroll.min.js"></script>
+  <script type="text/javascript" src="/js/jquery.plugin.min.js"></script>
+  <script type="text/javascript" src="/js/placeholders.min.js"></script>
+  <script type="text/javascript" src="/js/countdown.min.js"></script>
+  <script type="text/javascript" src="/js/scripts.js"></script>
+
+</body>
+
+</html>
