--- a/_layouts/public-and-private-cloud.html
+++ b/_layouts/public-and-private-cloud.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:100,400,300,700,400italic,500%7CMontserrat:400,700">
   <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Merriweather:300,700,700italic,300italic|Open+Sans:700,400">
 
-  <link rel="stylesheet" type="text/css" href="/css/colocation.css">
+  <link rel="stylesheet" type="text/css" href="/css/public-and-private-cloud.css">
 
 </head>
 
@@ -26,7 +26,7 @@
   		<div class="nav-container">
 		
 
-			<nav class="nav-1" style="max-width: 100%; background: #678647; border-bottom: 1px solid rgba(255, 255, 255, 0.2);">
+			<nav class="nav-1" style="max-width: 100%; background: #56aadb; border-bottom: 1px solid rgba(255, 255, 255, 0.2);">
 				<div class="container">
 					<div class="row">
 						<div class="col-xs-12">
@@ -34,11 +34,11 @@
 								<img alt="Logo" class="logo" style="margin-right: 30px; width: 85px;" src="https://console.coreix.net/assets/cwhite.png">
 							</a>
 							<ul class="menu">
-							
-								<li class="has-dropdown"><a href="/colocation"><i class="pe-7s-tools" style="font-weight: bold; padding-right: 10px;"></i> Colocation & Networking</a>
+
+								<li class="has-dropdown"><a href="/cloud"><i class="pe-7s-cloud" style="font-weight: bold; padding-right: 10px;"></i> Public & Private Cloud</a>
 									<ul class="subnav">
 										<li><a href="/dedicated-servers"><i class="pe-7s-server" style="font-weight: bold; padding-right: 10px;"></i> Dedicated Servers</a></li>
-										<li><a href="/cloud"><i class="pe-7s-cloud" style="font-weight: bold; padding-right: 10px;"></i> Public & Private Cloud</a></li>
+										<li><a href="/colocation"><i class="pe-7s-tools" style="font-weight: bold; padding-right: 10px;"></i> Colocation & Networking</a></li>
 										<li><a href="/managed-services"><i class="pe-7s-shopbag" style="font-weight: bold; padding-right: 10px;"></i> Managed Services</a></li>
 										
 									</ul>
@@ -59,13 +59,12 @@
 							
 							<ul class="menu" style="float: right;">
 								
-								<li><a href="/datacentres">Datacentres</a></li>
-								<li><a href="/disaster-recovery">Disaster Recovery</a></li>
-								<li><a href="/remote-hands">Remote Hands</a></li>
-								<li><a href="#">Connectivity</a></li>
-								<!-- <li><a href="/about-us">About Us</a></li> -->
-								<li><a href="/contact-us">Contact Us</a></li>
 								
+								<li><a href="/public-cloud">Public Cloud</a></li>
+								<li><a href="/private-cloud">Private Cloud</a></li>
+								<li><a href="/g-cloud">G-Cloud</a></li>
+								<li><a href="/contact-us">Contact Us</a></li>
+
 							</ul>
 						
 
@@ -80,6 +79,7 @@
 			</nav>
 			
 		</div>
+
 
 
 
