--- a/_layouts/managed-services.html
+++ b/_layouts/managed-services.html
@@ -37,9 +37,9 @@
 
 								<li class="has-dropdown"><a href="/managed-services"><i class="pe-7s-shopbag" style="font-weight: bold; padding-right: 10px;"></i> Managed Services</a>
 									<ul class="subnav">
-										<li><a href="/managed-services/dedicated-servers"><i class="pe-7s-server" style="font-weight: bold; padding-right: 10px;"></i> Dedicated Servers</a></li>
-										<li><a href="/managed-services/colocation"><i class="pe-7s-tools" style="font-weight: bold; padding-right: 10px;"></i> Colocation & Networking</a></li>
-										<li><a href="/managed-services/cloud"><i class="pe-7s-cloud" style="font-weight: bold; padding-right: 10px;"></i> Public & Private Cloud</a></li>
+										<li><a href="/dedicated-servers"><i class="pe-7s-server" style="font-weight: bold; padding-right: 10px;"></i> Dedicated Servers</a></li>
+										<li><a href="/colocation"><i class="pe-7s-tools" style="font-weight: bold; padding-right: 10px;"></i> Colocation & Networking</a></li>
+										<li><a href="/cloud"><i class="pe-7s-cloud" style="font-weight: bold; padding-right: 10px;"></i> Public & Private Cloud</a></li>
 									</ul>
 								</li>
 								
@@ -58,9 +58,9 @@
 							
 							<ul class="menu" style="float: right;">
 								
-								<li><a href="/resilient-security">Resilient Security</a></li>
-								<li><a href="/infrastructure-services">Infrastructure Services</a></li>
-								<li><a href="/managed-support">Managed Support</a></li>
+								<li><a href="/managed-services/resilient-security">Resilient Security</a></li>
+								<li><a href="/managed-services/infrastructure-services">Infrastructure Services</a></li>
+								<li><a href="/managed-services/managed-support">Managed Support</a></li>
 								<li><a href="/contact-us">Contact Us</a></li>
 
 							</ul>
