--- a/_layouts/public-and-private-cloud.html
+++ b/_layouts/public-and-private-cloud.html
@@ -60,9 +60,9 @@
 							<ul class="menu" style="float: right;">
 								
 								
-								<li><a href="/public-cloud">Public Cloud</a></li>
-								<li><a href="/private-cloud">Private Cloud</a></li>
-								<li><a href="/g-cloud">G-Cloud</a></li>
+								<li><a href="/cloud/public-cloud">Public Cloud</a></li>
+								<li><a href="/cloud/private-cloud">Private Cloud</a></li>
+								<li><a href="/cloud/g-cloud">G-Cloud</a></li>
 								<li><a href="/contact-us">Contact Us</a></li>
 
 							</ul>
