--- a/_includes/title/default.html
+++ b/_includes/title/default.html
@@ -2,8 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-md-offset-1 col-sm-12 text-center">
-                <p class="super-lead">{{ include.title }}</p>
-                <p class="super-lead">{{ include.description }}</p>
+                <p class="super-lead" style="font-size: 30px;">{{ include.title }}</p>
             </div>
         </div>
     </div>
