--- a/_includes/section/start.html
+++ b/_includes/section/start.html
@@ -1,1 +1,6 @@
-
+<section class="image-block">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-7">
+							<div class="text-block">
+							
