--- a/_includes/section/end.html
+++ b/_includes/section/end.html
@@ -1,1 +1,12 @@
-
+							</div>
+						</div>
+					</div>
+				</div>
+			
+				<div class="image-holder col-sm-4 pull-right">
+					<div class="background-image-holder">
+						<img alt="Slide Background" class="background-image" src="/assets/img/enfield.jpg">
+					</div>
+				</div>
+			
+			</section> 
