--- a/_includes/image-block/left/start.html
+++ b/_includes/image-block/left/start.html
@@ -1,1 +1,19 @@
+<section class="image-block">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-6 pull-right">
+							<div class="text-block">
+								<h3 style="color: #56aadb;">
+                                Agility to scale your managed cloud requirements
+                                </h3>
+							
+                                    <p class="lead">
+At Coreix, we will custom design a cloud solution for you which matches your cloud storage, backup, firewall, network and support requirements. Our experienced team can help guide you through which option fits your unique business model and ultimately optimise your IT strategy.     
+								</p>
+                                <p class="lead">
+                                We offer an agile and flexible service for customers as we believe that you shouldn’t have to fit your requirements around a specific server. We also tailor our service to ensure that you have the right level of backup storage, redundancy, firewall, processing power and support to ensure continuity of your business operations.
+                                </p>
+                                 <a class="btn" href="#" style="color: #66b2de; border-color: #66b2de; padding: 10px;">Find out more</a>
+								<a class="btn" href="#" style="color: #66b2de; border-color: #66b2de; padding: 10px;">Contact a Coreix specialist</a>
+                               
 
