--- a/_includes/image-block/right/end.html
+++ b/_includes/image-block/right/end.html
@@ -1,1 +1,12 @@
-
+							</div>
+						</div>
+					</div>
+				</div>
+			
+				<div class="image-holder col-sm-5 pull-right">
+					<div class="background-image-holder">
+						<img alt="Slide Background" class="background-image" src="http://www.webpt.com/sites/default/files/mantrap.jpg">
+					</div>
+				</div>
+			
+			</section>  
