--- a/_includes/image-block/left/end.html
+++ b/_includes/image-block/left/end.html
@@ -5,7 +5,7 @@
 			
 				<div class="image-holder col-sm-5">
 					<div class="background-image-holder">
-						<img alt="Slide Background" class="background-image" src="http://relentless-it.com/wp-content/uploads/2014/09/CloudComputing.jpg">
+						<img alt="Slide Background" class="background-image" src="{{ include.image }}">
 					</div>
 				</div>
 			
