--- a/_includes/image-block/right/end.html
+++ b/_includes/image-block/right/end.html
@@ -5,7 +5,7 @@
 			
 				<div class="image-holder col-sm-5 pull-right">
 					<div class="background-image-holder">
-						<img alt="Slide Background" class="background-image" src="http://www.webpt.com/sites/default/files/mantrap.jpg">
+						<img alt="Slide Background" class="background-image" src="{{ include.image }}">
 					</div>
 				</div>
 			
