--- a/_includes/image-block/right/start.html
+++ b/_includes/image-block/right/start.html
@@ -3,6 +3,6 @@
 					<div class="row">
 						<div class="col-sm-6">
 							<div class="text-block">
-								<h3 style="color: #56aadb;">Robust resilient energy efficient premium datacentre facilities</h3>
+								<h3 style="color: #56aadb;">{{ include.title }}</h3>
 							
                               
