--- a/_includes/article/start.html
+++ b/_includes/article/start.html
@@ -4,3 +4,5 @@
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 <div class="article-single text-center">
+
+                        <h4>{{ include.title }}</h4>
