--- a/_includes/large-title.html
+++ b/_includes/large-title.html
@@ -2,7 +2,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-10 col-md-offset-1 col-sm-12 text-center">
-							<h1 style="font-size: 40px;">Agile, scalable and reliable cloud solutions to suit your business requirements</h1>
+							<h1 style="font-size: 40px;">{{ include.title }}</h1>
 						</div>
 					</div>
 				</div>
