--- a/_layouts/dedicated-servers.html
+++ b/_layouts/dedicated-servers.html
@@ -59,9 +59,9 @@
 							
 							<ul class="menu" style="float: right;">
 							
-								<li><a href="#">Dedicated Solutions</a></li>
-								<li><a href="#">SMB Zone</a></li>
-								<li><a href="#">Enterprise Zone</a></li>
+								<li><a href="/dedicated-servers/dedicated-solutions">Dedicated Solutions</a></li>
+								<li><a href="/dedicated-servers/smb-zone">SMB Zone</a></li>
+								<li><a href="/dedicated-servers/enterprise-zone">Enterprise Zone</a></li>
 								<li><a href="/contact-us">Contact Us</a></li>
 								
 							</ul>
