--- a/css/colocation.css
+++ b/css/colocation.css
@@ -44,3 +44,25 @@
 .overlay-primary:before {
 	background: #769259;
 }
+
+
+
+
+
+
+
+
+.fullwidth-feature .top {
+  border-right: 0px solid #006ed9;
+}
+.fullwidth-features {
+  padding: 0px;
+  background: #ffffff !important;
+  position: relative;
+  overflow: visible;
+  min-height: 250px;
+  padding-bottom: 200px;
+}
+
+
+
