--- a/_layouts/colocation-and-networking.html
+++ b/_layouts/colocation-and-networking.html
@@ -59,10 +59,10 @@
 							
 							<ul class="menu" style="float: right;">
 								
-								<li><a href="/datacentres">Datacentres</a></li>
-								<li><a href="/disaster-recovery">Disaster Recovery</a></li>
-								<li><a href="/remote-hands">Remote Hands</a></li>
-								<li><a href="#">Connectivity</a></li>
+								<li><a href="/colocation/datacentres">Datacentres</a></li>
+								<li><a href="/colocation/disaster-recovery">Disaster Recovery</a></li>
+								<li><a href="/colocation/remote-hands">Remote Hands</a></li>
+								<li><a href="/colocation/connectivity">Connectivity</a></li>
 								<!-- <li><a href="/about-us">About Us</a></li> -->
 								<li><a href="/contact-us">Contact Us</a></li>
 								
