--- a/_includes/menu/default.html
+++ b/_includes/menu/default.html
@@ -26,7 +26,7 @@
             <li><a href="/contact-us">Contact Us</a></li>
             <li><a href="https://console.coreix.net" target="_blank">Client Login</a></li>
             <li><a href="#"><i class="social_twitter"></i></a></li>
-            <li><a href="#"><i class="icon social_facebook"></i></a></li>
+            <li><a href="#"><i class="icon social_Google+"></i></a></li>
             <li><a href="#"><i class="icon social_linkedin"></i></a></li>
           </ul>
 
