--- a/css/theme.css
+++ b/css/theme.css
@@ -5465,3 +5465,6 @@ footer:nth-child(odd) {
     transform: translate3d(1100px, -1200px, 0px) rotate(360deg);
   }
 }
+h1 {
+ margin-bottom: 0px;
+}
